modules/vpc/internet-gateway.tf
resource "aws_internet_gateway" "eks-igw" {
  vpc_id = aws_vpc.eks-vpc.id

  tags = {
    Name = "${var.env}-eks-cluster"
  }
}
